--- a/workbench/index6.html
+++ b/workbench/index6.html
@@ -18,6 +18,6 @@
 </head>
     <body ng-app="myApp" ng-controller="userController">
         <div style="width: 800px; height: 600px;"  ng-grid="gridOptions"></div>
-		<p>{{selections[0]}}</p>
+		<p>{{selections}}</p>
     </body>
 </html>
