Added ng-grid layout plugin.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	<script type="text/javascript" src="lib/angular.js"></script>
 	<script type="text/javascript" src="lib/bootstrap/js/bootstrap.js"></script>
 	<script type="text/javascript" src="lib/ng-grid.debug.js"></script>
+	<script type="text/javascript" src="lib/ng-grid-layout.js"></script>
 	<script type="text/javascript" src="js/app.js"></script>
 	<script type="text/javascript" src="js/services.js"></script>
 	<script type="text/javascript" src="js/directives.js"></script>
