Fixed #93. Updates to multiselect and refactored. Updating to 1.6.3.
Can now highlight/copy text in grid. Fixed multiple issues when using
multiselect along with shift key.  Won't highlight text when shift key
is down. Refactored key events so now they are all in the same directive
for viewport. Hovering over highlightable text will change cursors in
viewport. If column is not visible, won't be able to group by that
column. Updated plugin.

--- a/workbench/index3.html
+++ b/workbench/index3.html
@@ -12,7 +12,7 @@
     <script type="text/javascript" src="../lib/jquery.layout-latest.min.js"></script>
     <script type="text/javascript" src="../lib/angular.js"></script>
     <script type="text/javascript" src="../lib/bootstrap/js/bootstrap.js"></script>
-	<script type="text/javascript" src="../plugins/ngGridLayoutPlugin.js"></script>
+	<script type="text/javascript" src="../plugins/ng-grid-layout.js"></script>
     <script type="text/javascript" src="../build/ng-grid.debug.js"></script>
     <script type="text/javascript" src="layoutMain.js"></script>
     <script>
