--- a/workbench/index7.html
+++ b/workbench/index7.html
@@ -18,5 +18,6 @@
 </head>
     <body ng-app="myApp" ng-controller="userController">
         <div style="width: 800px; height: 600px;"  ng-grid="gridOptions"></div>
+		<p>{{selections}}</p>
     </body>
 </html>
