--- a/workbench/index6.html
+++ b/workbench/index6.html
@@ -18,6 +18,7 @@
 </head>
     <body ng-app="myApp" ng-controller="userController">
         <div style="width: 800px; height: 600px;"  ng-grid="gridOptions"></div>
+		<button ng-click="changeDefs()">test</button>
 		<p>{{selections}}</p>
     </body>
 </html>
