--- a/plugins/playground.html
+++ b/plugins/playground.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" type="text/css" href="style.css" />
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.2/angular.min.js"></script>
-        <script type="text/javascript" src="../ng-grid-1.6.0.debug.js"></script>
+        <script type="text/javascript" src="../build/ng-grid.debug.js"></script>
         <script type="text/javascript" src="ng-grid-csv-export.js"></script>
         <script type="text/javascript" src="ng-grid-flexible-height.js"></script>
         <style type="text/css">
