Fixes #100 from @1evan2

--- a/plugins/playground.html
+++ b/plugins/playground.html
@@ -70,8 +70,14 @@
         </script>
     </head>
     <body ng-controller="MyCtrl">
+        <div>
+          <a ng-click="myDataSmall.pop()"> remove one from small </a>
+        </div>
         <div class="gridStyle" ng-grid="gridOptionsSmall"></div>
         <hr>
+        <div>
+          <a ng-click="myDataBig.pop()"> remove one from small </a>
+        </div>
         <div class="gridStyle" ng-grid="gridOptionsBig"></div>
     </body>
 </html>
