--- a/workbench/index.html
+++ b/workbench/index.html
@@ -22,5 +22,6 @@
         <button ng-click="resetRows()">Reset Rows</button>
         <button ng-click="Add()">Insert Rows</button>
         <button ng-click="changeLang()">change Language</button>
+        <button ng-click="setSelections()">set Selections</button>
     </body>
 </html>
