--- a/workbench/index4.html
+++ b/workbench/index4.html
@@ -19,7 +19,7 @@
     <body ng-app="myApp" ng-controller="userController">
         <div style="width: 400px; height: 600px;" ng-grid="gridOptions2">
         </div>
-		<p>{{mySelections2}}</p>
+		<p>{{mySelections2[0].Sku}}</p>
 		<button ng-click="modifyData()">Modify Data</button>
     </body>
 </html>
