--- a/workbench/index6.html
+++ b/workbench/index6.html
@@ -19,6 +19,6 @@
     <body ng-app="myApp" ng-controller="userController">
         <div style="width: 800px; height: 600px;"  ng-grid="gridOptions"></div>
 		<button ng-click="changeDefs()">test</button>
-		<p>{{selections}}</p>
+		<p>{{selections[0].Sku}}</p>
     </body>
 </html>
