--- a/workbench/index8.html
+++ b/workbench/index8.html
@@ -19,6 +19,6 @@
     <body ng-app="myApp" ng-controller="userController">
         <div style="width: 500px; height: 500px;"  ng-grid="gridOptions"></div>
 		<button ng-click="getData()">get data</button>
-		<p>{{selections}}</p>
+		<p>{{selections[0].Sku}}</p>
     </body>
 </html>
