Add examples for cell selection

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
 								<li><a scrollto href="#themes">Themes</a></li>
 								<li><a scrollto href="#paging">Server-Side Paging</a></li>
 								<li><a scrollto href="#masterdetail">Master/Detail</a></li>
+								<li><a scrollto href="#cellSelection">Cell Selection</a></li>
 							</ul>
 						</li>		
 						<li>
