Adding row selection example.

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
 								<li><a scrollto href="#paging">Server-Side Paging</a></li>
 								<li><a scrollto href="#masterdetail">Master/Detail</a></li>
 								<li><a scrollto href="#cellSelection">Cell Selection</a></li>
+								<li><a scrollto href="#rowSelection">Row Selection</a></li>
 							</ul>
 						</li>		
 						<li>
