maintain selections when sorting or pushing.

--- a/workbench/index.html
+++ b/workbench/index.html
@@ -20,7 +20,7 @@
         <div style="width: 800px; height: 600px;"  ng-grid="gridOptions">
         </div>
 		<div>{{mySelections | json}}</div>
-        <button ng-click="resetRows()">Reset Rows</button>
+        <button ng-click="checkData()">Check Data</button>
         <button ng-click="Add()">Insert Rows</button>
         <button ng-click="changeLang()">change Language</button>
         <button ng-click="setSelections()">set Selections</button>
