--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 								<li><a scrollto href="#masterdetail">Master/Detail</a></li>
 								<li><a scrollto href="#cellSelection">Cell Selection</a></li>
 								<li><a scrollto href="#rowSelection">Row Selection</a></li>
+								<li><a scrollto href="#columnPinning">Column Pinning</a></li>
 							</ul>
 						</li>		
 						<li>
