--- a/workbench/index.html
+++ b/workbench/index.html
@@ -23,6 +23,6 @@
         <button ng-click="checkData()">Check Data</button>
         <button ng-click="Add()">Insert Rows</button>
         <button ng-click="changeLang()">change Language</button>
-        <button ng-click="setSelections()">set Selections</button>
+        <button ng-click="setSelection()">set Selections</button>
     </body>
 </html>
