--- a/test/runner.html
+++ b/test/runner.html
@@ -3,13 +3,14 @@
   <head>
       <title>End2end Test Runner</title>
     <link rel="stylesheet" type="text/css" href="lib/jasmine/jasmine.css" />
-    <script src="../lib/jquery-1.8.2.min.js" ng-autotest></script>
+    <script src="../lib/jquery-1.9.1.js" ng-autotest></script>
     <script src="../lib/angular.js" ng-autotest></script>
     <script src="lib/jasmine/jasmine.js" ng-autotest></script>
     <script src="lib/jasmine/jasmine-html.js" ng-autotest></script>
     <script src="lib/angular/angular-mocks.js" ng-autotest></script>
     <script src="../build/ng-grid.debug.js" ng-autotest></script>
     <script src="unit/servicesSpec.js"></script>
+    <script src="unit/filtersSpec.js"></script>
   </head>
   <body>
   <script>
