--- a/workbench/index3.html
+++ b/workbench/index3.html
@@ -7,7 +7,7 @@
 	
     <script type="text/javascript" src="largeLoad.js"></script>
     <script type="text/javascript" src="largeTestData.js"></script>
-    <script type="text/javascript" src="../lib/jquery-1.8.2.min.js"></script>
+    <script type="text/javascript" src="../lib/jquery-1.9.1.js"></script>
     <script type="text/javascript" src="../lib/jquery-ui-1.9.1.custom.min.js"></script>
     <script type="text/javascript" src="../lib/jquery.layout-latest.min.js"></script>
     <script type="text/javascript" src="../lib/angular.js"></script>
