--- a/workbench/index5.html
+++ b/workbench/index5.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="../ng-grid.css" />
     <script type="text/javascript" src="largeLoad.js"></script>
     <script type="text/javascript" src="largeTestData.js"></script>
-    <script type="text/javascript" src="../lib/jquery-1.8.2.min.js"></script>
+    <script type="text/javascript" src="../lib/jquery-1.9.1.js"></script>
     <script type="text/javascript" src="../lib/jquery-ui-1.9.1.custom.min.js"></script>
     <script type="text/javascript" src="../lib/angular.js"></script>
     <script type="text/javascript" src="../lib/bootstrap/js/bootstrap.js"></script>
