--- a/workbench/index.html
+++ b/workbench/index.html
@@ -15,6 +15,21 @@
     <script>
         angular.module('myApp',['ngGrid']);
     </script>
+    <style type="text/css">
+        .ngRow.selected {
+          color: #ffffff;
+          font-weight: bold;
+          background-color: #76b617;
+          background-image: -webkit-linear-gradient(top, #76b617, #638911);
+          background-image: -moz-linear-gradient(top, #76b617, #638911);
+          background-image: -o-linear-gradient(top, #76b617, #638911);
+          background-image: -ms-linear-gradient(top, #76b617, #638911);
+          background-image: linear-gradient(top, #76b617, #638911);
+          -webkit-border-radius: 4px 4px 4px 4px;
+          -moz-border-radius: 4px 4px 4px 4px;
+          border-radius: 4px 4px 4px 4px;
+        }
+    </style>
 </head>
     <body ng-app="myApp" ng-controller="userController">
         <div style="width: 1600px; height: 600px;"  ng-grid="gridOptions">
