--- a/workbench/index.html
+++ b/workbench/index.html
@@ -33,7 +33,7 @@
 </head>
     <body ng-app="myApp" ng-controller="userController" >
         <div id="parent" style="position: absolute; top: 0; bottom: 0; left:0; right: 0;">
-            <div style="width: 1600px; height: 600px;"  ng-grid="gridOptions">
+            <div style="width: 1600px; height: 600px;" class="table"  ng-grid="gridOptions">
             </div>    
         </div>
         <div>{{mySelections | json}}</div>
