--- a/workbench/templating/external.html
+++ b/workbench/templating/external.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="../../ng-grid.css" />
     <script type="text/javascript" src="../../lib/jquery-1.9.1.js"></script>
     <script type="text/javascript" src="../../lib/jquery-ui-1.9.1.custom.min.js"></script>
-    <script type="text/javascript" src="../../lib/angular-1.1.3.js"></script>
+    <script type="text/javascript" src="../../lib/angular.js"></script>
     <script type="text/javascript" src="../../lib/angular-resource-1.0.6.js"></script>
     <script type="text/javascript" src="../../lib/bootstrap/js/bootstrap.js"></script>
     <script type="text/javascript" src="../../build/ng-grid.debug.js"></script>
