Fixed Angular UI 'router' link
Changed it to be the same as the link on the main Angular UI page nav

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 						<li><a href="http://angular-ui.github.com/">AngularUI</a></li>
 						<li><a href="http://angular-ui.github.com/bootstrap/">Bootstrap</a></li>
 						<li><a href="https://github.com/angular-ui/AngularJs.tmbundle">AngularJS.tmbundle</a></li>
-						<li><a href="http://angular-ui.github.com/router/">Router <span class="label label-success">New!</span></a></li>
+						<li><a href="http://angular-ui.github.io/ui-router/sample/">Router <span class="label label-success">New!</span></a></li>
 						<li><a href="http://angular-ui.github.com/Tips-n-Tricks/">Tips-n-Tricks <span class="label">WIP</span></a></li>
 					</ul>
 				</div>
