Fixed 'demo page broken' link
ng-grid.github.com project no longer exists. Linked to ng-grid issues with label
'demo' instead.

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 							</a>
 							<ul class="dropdown-menu">
 								<li><a href="https://github.com/angular-ui/ng-grid/issues?sort=updated&amp;state=open">ng-grid broken or want a new feature?</a></li>
-								<li><a href="https://github.com/angular-ui/ng-grid.github.com/issues?sort=updated&amp;state=open">Demo page broken or missing demos?</a></li>
+								<li><a href="https://github.com/angular-ui/ng-grid/issues?labels=demos&amp;sort=updated&amp;state=open">Demo page broken or missing demos?</a></li>
 							</ul>
 						</li>
 					</ul>
