--- a/misc/site/index.html
+++ b/misc/site/index.html
@@ -33,15 +33,20 @@
 
       <p>A data grid for <strong><a href="http://angularjs.org">AngularJS</a></strong></p>
       <p>... more stuff ...</p>
+
+      <br>
+
       <p class="btn-group2">
         <a class="btn btn-success btn-large" href="https://github.com/angular-ui/ng-grid" title="Code on Github">
           <i class="fa fa-github fa-fw"></i>
           Code on Github
         </a>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <a class="btn btn-danger btn-large" href="https://github.com/angular-ui/ui-grid.info/tree/gh-pages" title="Download <%= version %>">
           <i class="fa fa-download fa-fw"></i>
           Download <!-- <small>(<%= pkg.version %>)</small> -->
         </a>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <a class="btn btn-success btn-large" href="http://<%= site %>/docs" title="API Documentation">
           <i class="fa fa-gears fa-fw"></i>
           API Documentation
