WIP: pretty versions on download button

--- a/misc/site/index.html
+++ b/misc/site/index.html
@@ -19,9 +19,9 @@
           <a href="/" class="brand">UI Grid</a>
           <p class="navbar-text pull-right">
             <iframe class="nav-ghbtn" src="http://ghbtns.com/github-btn.html?user=angular-ui&repo=ng-grid&type=watch&count=true"
-                  allowtransparency="true" frameborder="0" scrolling="0" width="80" height="50"></iframe>
+                  allowtransparency="true" frameborder="0" scrolling="0" width="120" height="20"></iframe>
             <iframe class="nav-ghbtn" src="http://ghbtns.com/github-btn.html?user=angular-ui&repo=ng-grid&type=fork&count=true"
-                  allowtransparency="true" frameborder="0" scrolling="0" width="80" height="50"></iframe>
+                  allowtransparency="true" frameborder="0" scrolling="0" width="120" height="20"></iframe>
           </p>
         </div>
       </div>
@@ -37,16 +37,22 @@
       <br>
 
       <p class="btn-group2">
+
         <a class="btn btn-success btn-large" href="https://github.com/angular-ui/ng-grid" title="Code on Github">
           <i class="fa fa-github fa-fw"></i>
           Code on Github
         </a>
+
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
         <a class="btn btn-danger btn-large" href="https://github.com/angular-ui/ui-grid.info/tree/gh-pages" title="Download <%= version %>">
           <i class="fa fa-download fa-fw"></i>
-          Download <!-- <small>(<%= pkg.version %>)</small> -->
+          Download <small>( <%= stable_version %> / <%= version %> )</small>
         </a>
+
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+
+        <span>
         <a class="btn btn-success btn-large" href="http://<%= site %>/docs" title="API Documentation">
           <i class="fa fa-gears fa-fw"></i>
           API Documentation
