--- a/misc/site/index.html
+++ b/misc/site/index.html
@@ -17,6 +17,22 @@
       <div class="navbar-inner">
         <div class="container">
           <a href="/" class="brand">UI Grid</a>
+          <ul class="nav">
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                Learn
+                <b class="caret"></b>
+              </a>
+              <ul class="dropdown-menu">
+                <li>
+                  <a href="/docs/#/api">Docs</a>
+                </li>
+                <li>
+                  <a href="/docs/#/tutorial">Tutorial</a>
+                </li>
+              </ul>
+            </li>
+          </ul>
           <p class="navbar-text pull-right">
             <iframe class="nav-ghbtn" src="http://ghbtns.com/github-btn.html?user=angular-ui&repo=ng-grid&type=watch&count=true"
                   allowtransparency="true" frameborder="0" scrolling="0" width="120" height="20"></iframe>
@@ -60,5 +76,7 @@
       </p>
     </div>
   </div>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+  <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
 </body>
 </html>
