WIP: fix grunt syntax errors

--- a/misc/site/index.html
+++ b/misc/site/index.html
@@ -61,7 +61,7 @@
 
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
-        <a class="btn btn-danger btn-large" href="https://github.com/angular-ui/ui-grid.info/tree/gh-pages" title="Download <%= version %>">
+        <a class="btn btn-danger btn-large" href="https://github.com/angular-ui/ui-grid.info/tree/gh-pages/release" title="Download <%= version %>">
           <i class="fa fa-download fa-fw"></i>
           Download <small>( <%= stable_version %> / <%= version %> )</small>
         </a>
@@ -76,6 +76,43 @@
       </p>
     </div>
   </div>
+
+  <div class="container">
+    <div class="row">
+      <div class="span4">
+        <div class="text-center">
+          <i class="fa fa-4x fa-wrench"></i>
+        </div>
+        <h4 class="text-center">Configurable</h4>
+        <ul>
+          <li>Customizeable templates</li>
+          <li>Change look and feel with CSS</li>
+          <li>Drop-in plugin system</li>
+        </ul>
+      </div>
+
+      <div class="span4">
+        <div class="text-center">
+          <i class="fa fa-4x fa-gear"></i>
+        </div>
+        <h4>Advanced features</h4>
+        <ul>
+          <li>Virtualization</li>
+          <li>Column pinning</li>
+          <li>Grouping</li>
+        </ul>
+      </div>
+
+      <div class="span4 text-center">
+        <div class="text-center">
+          <i class="fa fa-4x fa-camera"></i>
+        </div>
+        <h4 class="">Cute Kittens</h4>
+        <img class="img-circle" src="http://placekitten.com/180/180" />
+      </div>
+    </div>
+  </div>
+
   <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
   <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
 </body>
