fix(customizer): point to ui-grid-unstable.css at top of page

--- a/misc/site/customizer/index.html
+++ b/misc/site/customizer/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="/docs/css/bootstrap-flatly.css" />
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" />
   <link rel="stylesheet" href="/css/site.css" />
-  <link rel="stylesheet" href="/release/ui-grid.css" />
+  <link rel="stylesheet" href="/release/ui-grid-unstable.css" />
   <style>
     .compiled-css {
       height: 280px;
@@ -139,7 +139,7 @@
   </div>
 
   <script src="//cdnjs.cloudflare.com/ajax/libs/less.js/1.6.0/less.min.js"></script>
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.js"></script>
 
   <!--
   <script src="//cdnjs.cloudflare.com/ajax/libs/zeroclipboard/1.2.3/ZeroClipboard.js"></script>
@@ -170,6 +170,7 @@
       s.src = '/release/ui-grid-unstable.js';
     }
     else {
+      // s.src = 'http://ui-grid.info/release/ui-grid-unstable.js';// '/release/ui-grid.js';
       s.src = '/release/ui-grid.js';
     }
     document.write(outerHTML(s));
