Minor text updates, remove debug statement, update autumn theme header color

--- a/misc/site/index.html
+++ b/misc/site/index.html
@@ -86,7 +86,7 @@
         <h4 class="text-center">Configurable</h4>
         <ul>
           <li>Customizeable templates</li>
-          <li>Change look and feel with CSS</li>
+          <li>Change look and feel with CSS and the <a href="/customizer">customizer</a></li>
           <li>Drop-in plugin system</li>
         </ul>
       </div>
