Add support for custom templates
Allow developer to provide custom template to structure and style the download link. Three types of placeholder can be used to instruct the plugin in places to insert proper links:

- {{__ALL__}}: link to CSV download of the whole data set;
- {{__SELECTED_ITEMS__}}: link to CSV download of selected items;
- {{__DEFAULT__}}: if any item is selected, it links to SELECTED_ITEMS, otherwise ALL.

Add support for exporting selected items only

By default, this feature is off. Developer can turn it on by setting "enableSelectionExporting" to "true" and provide a custom template with placeholders for selected items, e.g. '<span class="csv-data-link-span"><a href="data:text/csv;charset=UTF-8,{{__SELECTED_ITEMS__}}">Selected only</a></span>'.

Others

- Avoid using for...in to iterate over an array as the order of iteration might not be guaranteed (Ref: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Statements/for...in);
- Watch "grid.data.length" instead of doing a hash key concatenation as the link to all data would need to be generated only when items are added/removed.

--- a/plugins/playground.html
+++ b/plugins/playground.html
@@ -15,12 +15,22 @@
             ; height: 1400px
             ; width: 80%
           }
+          .csv-data-link-span > a {
+            margin-right: 10px;
+          }
         </style>
         <script type="text/javascript">
             // main.js
             var app = angular.module('myApp', ['ngGrid']);
             app.controller('MyCtrl', function($scope) {
-                csvOpts = { columnOverrides: { obj: function(o) { return o.a + '|' +  o.b; } } }
+                csvOpts = { 
+                  columnOverrides: { obj: function(o) { return o.a + '|' +  o.b; } },
+                  enableSelectionExporting: true,
+                  template: '<span class="csv-data-link-span"><br>Export CSV: ' +
+                            '<a href="data:text/csv;charset=UTF-8,{{__SELECTED_ITEMS__}}">Selected only</a>' + 
+                            '<a href="data:text/csv;charset=UTF-8,{{__ALL__}}">All</a>' +
+                            '</span>'
+                }
                 hgtOpts = { minHeight: 200 }  ;
                 $scope.myDataSmall = [ {hasThing: false,  obj: {a:5, b:6}, name: "Moroni", age: 50, ln: 'sdf'}
                                      , {hasThing:  true,  obj: {a:6, b:7}, ln: "Tiasdfsdfnd", age: 43}
