Horizontal scrolling closer to working. Offset gets off once the set of rendered columns changes widths.

--- a/misc/demo/grid-directive.html
+++ b/misc/demo/grid-directive.html
@@ -19,8 +19,9 @@
       }
 
       .grid {
-        height: 300px;
-        width: 600px;
+        height: 600px;
+        width: 300px;
+        -webkit-transform: translateZ(0);
       }
     </style>
   </head>
