--- a/misc/site/index.html
+++ b/misc/site/index.html
@@ -5,6 +5,7 @@
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <link rel="stylesheet" href="/docs/css/bootstrap.min.css" />
   <link rel="stylesheet" href="/docs/css/bootstrap-flatly.css" />
